--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,13 +23,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="130dp"
-        android:layout_marginEnd="90dp"
+        android:layout_marginEnd="0dp"
         android:gravity="center"
         android:text="Aplikasi E-Dosir"
-        android:textStyle="bold"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
