--- a/app/src/main/res/layout/activity_penerima_list.xml
+++ b/app/src/main/res/layout/activity_penerima_list.xml
@@ -24,7 +24,7 @@
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:contextClickable="true"
             android:inputType="textCapSentences"
             app:queryHint="Search"/>
@@ -47,6 +47,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:indeterminateTint="@color/white"
         android:layout_marginStart="150dp"
         android:layout_marginTop="310dp"
         android:layout_marginEnd="150dp"
